--- a/README
+++ b/README
@@ -5,8 +5,8 @@
 This project is a demo text dungeon game in developement.
 
 To use the system, all the files included must be in the same directory folder.
-The user is meant to run the conda_main.py file. All other files are pulled into this one.
+The user is meant to run the main.py file. All other files are pulled into this one.
 
 For more information, contact Alex Cummins at axcummins@gmail.com.
 
->Hosted on Google Drive<
+>Hosted on Github<
